--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'E201'
 - !lcsh 'United States -- History -- Revolution, 1775-1783 -- Biography'
+- GITenberg
 title: The Sages and Heroes of the American Revolution
 url: http://www.gutenberg.org/ebooks/33905
